--- a/ooresults/templates/add_class.html
+++ b/ooresults/templates/add_class.html
@@ -23,30 +23,44 @@ $def format_voided_legs(legs):
     $return ', '.join(s)
 
 
+$if class_:
+    $ id = str(class_.id)
+    $ name = class_.name
+    $ short_name = class_.short_name if class_.short_name is not None else ''
+    $ course_id = class_.course_id
+    $ params = class_.params
+$else:
+    $ id = ""
+    $ name = ""
+    $ short_name = ""
+    $ course_id = None
+    $ params = ClassParams()
+
+
 <!-- Modal content -->
 <div class="modal-content">
     <span class="close" onclick="document.getElementById('cls.addDialog').style.display='none'">&times;</span>
     <form id="cls.formAdd" class="form-container" autocomplete="off" onsubmit="cls_submitAdd(); return false;">
-        <input id="cls.addId" name="id" type="text" value="$class_.id" hidden/>
+        <input id="cls.addId" name="id" type="text" value="$id" hidden/>
         <table id="cls.addFormTable">
             <tr>
                 <th class="input-header"><label for="name">Name *</label></th>
-                <td><input name="name" type="text" value="$class_.name" required onchange="mark_label(this)"/></td>
+                <td><input name="name" type="text" value="$name" required onchange="mark_label(this)"/></td>
             </tr>
             <tr>
                 <th class="input-header"><label for="short_name">Short name</label></th>
-                <td><input name="short_name" type="text" value="$(class_.short_name if class_.short_name is not None else '')" onchange="mark_label(this)"/></td>
+                <td><input name="short_name" type="text" value="$short_name" onchange="mark_label(this)"/></td>
             </tr>
             <tr>
                 <th class="input-header"><label for="course">Course</label></th>
                 <td>
                     <select id="course" name="course" onchange="mark_label(this)">
-                    $if class_.course_id is None:
+                    $if course_id is None:
                         <option value="" selected></option>
                     $else:
                         <option value=""></option>
                     $for course in courses:
-                        $if course.id == class_.course_id:
+                        $if course.id == course_id:
                             <option value="$course.id" selected>$course.name</option>
                         $else:
                             <option value="$course.id">$course.name</option>
@@ -55,14 +69,14 @@ $def format_voided_legs(legs):
             </tr>
             <tr>
                 <th class="input-header"><label for="voided_legs">Voided legs</label></th>
-                <td><input name="voided_legs" type="text" placeholder="c1-c2, c3-c4, ..." value="$format_voided_legs(class_.params.voided_legs)" onchange="mark_label(this)"/></td>
+                <td><input name="voided_legs" type="text" placeholder="c1-c2, c3-c4, ..." value="$format_voided_legs(params.voided_legs)" onchange="mark_label(this)"/></td>
             </tr>
             <tr>
                 <th class="input-header"><label for="type">Type</label></th>
                 <td>
                     <select id="type" name="type" onchange="mark_label(this)">
                         $for value, text in (('standard', 'Standard'), ('net', 'Net'), ('score', 'Score'))
-                            $if value == class_.params.otype:
+                            $if value == params.otype:
                                 <option value="$str(value)" selected>$text</option>
                             $else:
                                 <option value="$str(value)">$text</option>
@@ -74,7 +88,7 @@ $def format_voided_legs(legs):
                 <td>
                     <select id="startControl" name="startControl" onchange="mark_label(this)">
                         $for value, text in (('if_punched', 'If punched'), ('no', 'No'), ('yes', 'Yes'))
-                            $if value == class_.params.using_start_control:
+                            $if value == params.using_start_control:
                                 <option value="$str(value)" selected>$text</option>
                             $else:
                                 <option value="$str(value)">$text</option>
@@ -86,7 +100,7 @@ $def format_voided_legs(legs):
                 <td>
                     <select id="handicap" name="handicap" onchange="mark_label(this)">
                         $for value, text in ((0, 'No'), (1, 'Yes'))
-                            $if value == class_.params.apply_handicap_rule:
+                            $if value == params.apply_handicap_rule:
                                 <option value="$str(value)" selected>$text</option>
                             $else:
                                 <option value="$str(value)">$text</option>
@@ -95,19 +109,19 @@ $def format_voided_legs(legs):
             </tr>
             <tr>
                 <th class="input-header"><label for="massStart">Mass start</label></th>
-                <td><input id="massStart" name="massStart" type="time" step="1" value="$format_date(class_.params.get('mass_start', None))" onchange="mark_label(this)"/></td>
+                <td><input id="massStart" name="massStart" type="time" step="1" value="$format_date(params.mass_start)" onchange="mark_label(this)"/></td>
             </tr>
             <tr>
                 <th class="input-header"><label for="timeLimit">Time limit</label></th>
-                <td><input id="timeLimit" name="timeLimit" type="str" pattern="[0-9]+:[0-5][0-9]" placeholder="m:ss" value="$format_time(class_.params.get('time_limit', None))" onchange="mark_label(this)"/></td>
+                <td><input id="timeLimit" name="timeLimit" type="str" pattern="[0-9]+:[0-5][0-9]" placeholder="m:ss" value="$format_time(params.time_limit)" onchange="mark_label(this)"/></td>
             </tr>
             <tr>
                 <th class="input-header"><label for="penaltyControls">Penalty controls</label></th>
-                <td><input id="penaltyControls" name="penaltyControls" type="number" min="1" placeholder="seconds" value="$format_int(class_.params.get('penalty_controls', None))" onchange="mark_label(this)"/></td>
+                <td><input id="penaltyControls" name="penaltyControls" type="number" min="1" placeholder="seconds" value="$format_int(params.penalty_controls)" onchange="mark_label(this)"/></td>
             </tr>
             <tr>
                 <th class="input-header"><label for="penaltyOvertime">Penalty time limit</label></th>
-                <td><input id="penaltyOvertime" name="penaltyOvertime" type="number" min="1" placeholder="seconds" value="$format_int(class_.params.get('penalty_overtime', None))" onchange="mark_label(this)"/></td>
+                <td><input id="penaltyOvertime" name="penaltyOvertime" type="number" min="1" placeholder="seconds" value="$format_int(params.penalty_overtime)" onchange="mark_label(this)"/></td>
             </tr>
         </table>
         <p></p>
