Dataclasses EntryType and RankedEntryType added

--- a/ooresults/templates/add_class.html
+++ b/ooresults/templates/add_class.html
@@ -54,7 +54,7 @@ $else:
             <tr>
                 <th class="input-header"><label for="course">Course</label></th>
                 <td>
-                    <select id="course" name="course" onchange="mark_label(this)">
+                    <select id="course_id" name="course_id" onchange="mark_label(this)">
                     $if course_id is None:
                         <option value="" selected></option>
                     $else:
