--- a/ooresults/templates/add_course.html
+++ b/ooresults/templates/add_course.html
@@ -25,11 +25,11 @@ $else:
             </tr>
             <tr>
                 <th class="input-header"><label for="length">Length</label></th>
-                <td><input name="length" type="number" min="0" max="99999" value="$length" onchange="mark_label(this)"/></td>
+                <td><input name="length" type="number" min="0" max="99999" placeholder="meters" value="$length" onchange="mark_label(this)"/></td>
             </tr>
             <tr>
                 <th class="input-header"><label for="climb">Climb</label></th>
-                <td><input name="climb" type="number" min="0" max="99999" value="$climb" onchange="mark_label(this)"/></td>
+                <td><input name="climb" type="number" min="0" max="99999" placeholder="meters" value="$climb" onchange="mark_label(this)"/></td>
             </tr>
             <tr>
                 <th class="input-header"><label for="controls">Controls</label></th>
