--- a/ooresults/templates/add_entry_result.html
+++ b/ooresults/templates/add_entry_result.html
@@ -37,7 +37,7 @@ $def format_diff_time(t):
             </tr>
             <tr>
                 <th class="input-header"><label>Class</label></th>
-                <td><label>$entry.class_</label></td>
+                <td><label>$entry.class_name</label></td>
             </tr>
             <tr>
                 <th class="input-header"><label>Chip</label></th>
