--- a/ooresults/templates/entries_tab_content.html
+++ b/ooresults/templates/entries_tab_content.html
@@ -182,7 +182,7 @@ $def with (entries_table)
         document.getElementById('gender').value = entr_comp_selected.getElementsByTagName('TD')[2].innerHTML;
         document.getElementById('year').value = entr_comp_selected.getElementsByTagName('TD')[3].innerHTML;
         document.getElementById('chip').value = entr_comp_selected.getElementsByTagName('TD')[4].innerHTML;
-        document.getElementById('club').value = entr_comp_selected.getElementsByTagName('TD')[6].innerHTML;
+        document.getElementById('club_id').value = entr_comp_selected.getElementsByTagName('TD')[6].innerHTML;
         document.getElementById('entr.competitorsDialog').style.display = 'none';
     }
 
